# Free-Fire-Cheat

./: README.MD
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Client/: client.cpp
app/src/main/cpp/Client/ESP/: Color.hpp  ESP.h
app/src/main/cpp/ClientServerCommon/: ClientServerCommon.h
app/src/main/cpp/Server/: FeatureState.h  FunctionAndHook.h  Offset.h  Offset1.92.1.h  Server.cpp
app/src/main/cpp/Server/KittyMemory/: MemoryPatch.cpp  MemoryPatch.h
app/src/main/cpp/Server/Substrate/: SubstrateDebug.cpp  SubstrateHook.cpp  SubstratePosixMemory.cpp  SymbolFinder.cpp  obfuscate.h
app/src/main/cpp/Socket/: Const.h  SocketClient.cpp  SocketServer.cpp  SocketServer.h
app/src/main/cpp/Unity/: Rect.hpp  Unity.h
app/src/main/cpp/Utils/: Obfuscate.h
app/src/main/cpp/injector/: PtraceInject.h  PtraceUtils.h  inject.cpp
app/src/main/java/gamingbd/pro/: ESP.java  FloatingViewService.java  MainActivity.java  Native.java  Utils.java
